  CVE-2019-7573, CVE-2019-7574, CVE-2019-7575, CVE-2019-7576,
  CVE-2019-7577, CVE-2019-7578 -- bugs 4490, 4491, 4492, 4493, 4494,
  4495, 4496, and 4522.)
- Video, bmp loader:  security fixes for CVE-2019-7635, CVE-2019-7636,
  CVE-2019-7638, CVE-2019-13616 (bugs 4498, 4499, 4500, 4517 and 4538.)
- Video, blit: fix handling of alpha channel in Altivec accelerated
  blit functions (bug 1424.)
- Video, blit: use fast path for RGB 565 -> 32-bit XRGB 8888
- Video, blit: fix RGBA<->RGBA blit broken with the optimization from
  bug 11 (bug 2976.)
- Video: fix integer overflow in SDL_CalculatePitch (CVE-2019-7637,
  bug 4497.)
- Mouse: fix SDL_ResetMouse() using a bogus mouse button causing a
  negative shift (bug 3593.)
- Cdrom: fix SDL_CDResume() and SDL_CDStop() not returning failure
  when they should (bug 4108.)
- Unix, pthread: Fix SDL_SemWaitTimeout() returning -1 instead of
  SDL_MUTEX_TIMEDOUT upon timeout (bug 1426.)
- NetBSD: wscons support.
- NetBSD, audio: use AUDIO_GETBUFINFO when available.
- OpenBSD, audio: add sndio support.
- Haiku/BeOS, audio: fix error in buffer size setting (bug 1679.)
- OpenBSD: fix dynamic loading of X libs (bug 1434.)
- X11video: fix missing symbol X11_KeyToUnicode in .so file (bug 1390.
  not being an official SDL function, the use of X11_KeyToUnicode() is
  strongly discouraged.)
- X11video: fix compilation with libX11 >= 1.5.99.902 (bug 1769.)
- X11video: fix for XChangeProperty() crash (bug 1427.)
- X11video: fix SDL_EnableUNICODE sometimes dropping keyboard events
  completely (bug 2325.)
- X11video: fix no SDL_VIDEORESIZE event being generated when the
  window manager sets the window size (bug 1859.)
- X11video: fix X11_SetGammaRamp not checking the return value of
  XStoreColors (bugs 1979, 3770.)
- X11video: fix SDL_VIDEORESIZE events not received when resizing
  window from the corner (inverted logic in X11 ConfigureNotify, i.e.
  resize handling - bug 1430.)