@@ -38,10 +38,14 @@ Changes include:
   blit functions (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1424">1424</a>.)
 </P>
 <P>
-  Video, blit: use fast path for RGB 565 -> 32-bit XRGB 8888
+  Video, blit: correct vec_perm() application on little-endian 64-bit
+  PowerPC (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=4791">4791</a>.  cf.: RedHat bug <a href="https://bugzilla.redhat.com/show_bug.cgi?id=1392465">1392465</a>.)
 </P>
 <P>
-  Video, blit: fix RGBA<->RGBA blit broken with the optimization from
+  Video, blit: use fast path for RGB 565 -&gt; 32-bit XRGB 8888
+</P>
+<P>
+  Video, blit: fix RGBA&lt;-&gt;RGBA blit broken with the optimization from
   <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=11">bug 11</a> (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=2976">2976</a>.)
 </P>
 <P>
@@ -81,7 +85,7 @@ Changes include:
   strongly discouraged.)
 </P>
 <P>
-  X11video: fix compilation with libX11 >= 1.5.99.902 (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1769">1769</a>.)
+  X11video: fix compilation with libX11 &gt;= 1.5.99.902 (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1769">1769</a>.)
 </P>
 <P>
   X11video: fix for XChangeProperty() crash (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1427">1427</a>.)
